--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   "devDependencies": {
     "@babel/cli": "7.14.5",
     "@babel/core": "7.14.6",
-    "@babel/preset-env": "7.14.5"
+    "@babel/preset-env": "7.14.5",
+    "babel-plugin-add-module-exports": "1.0.4"
   },
   "dependencies": {
     "jsx-ast-utils": "3.2.0"
