--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "eslint-plugin-react-use-props",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "eslint plugin for enforce that all components that require or deprecate props",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run build && mocha test --recursive",
     "build": "babel src --out-dir dist",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -28,11 +28,16 @@
     "url": "https://github.com/docccdev/eslint-plugin-react-use-props/issues"
   },
   "homepage": "https://github.com/docccdev/eslint-plugin-react-use-props#readme",
+  "peerDependencies": {
+    "eslint": ">=2.0"
+  },
   "devDependencies": {
     "@babel/cli": "7.14.5",
     "@babel/core": "7.14.6",
     "@babel/preset-env": "7.14.5",
-    "babel-plugin-add-module-exports": "1.0.4"
+    "babel-plugin-add-module-exports": "1.0.4",
+    "eslint": "7.28.0",
+    "mocha": "9.0.0"
   },
   "dependencies": {
     "jsx-ast-utils": "^3.2.0"
